@@ -73,7 +73,7 @@ const httpserver = http.createServer((req, res) => {
   // acces limite.
   } else if (req.url.startsWith("/cdn/cdnboxStates") || req.url.startsWith("/cdn/config") ||
              req.url.startsWith("/cdn/cdnboxes") || req.url.startsWith("/cdn/console") ||
-             req.url.startsWith("/cdn/api/states")) {
+             req.url.startsWith("/cdn/api/states") || req.url.startsWith("/cdn/status")) {
 
     if (req.method === 'OPTIONS') {
       res.writeHead(200, {
@@ -92,6 +92,10 @@ const httpserver = http.createServer((req, res) => {
         res.writeHead(200, { "Content-Type": "application/json", "Access-Control-Allow-Origin": "*" });
         apiStates(req,res);
         res.end();
+      } else if (req.url.startsWith("/cdn/status")) {
+        res.writeHead(200, { "Content-Type": "application/json" });
+        cdnbox_status(req,res);
+        res.end('');
 
       // UI (raw).
       } else if (req.url.startsWith("/cdn/cdnboxes")) {
@@ -413,6 +417,38 @@ function verifytoken(req) {
     var hash = crypto.createHmac('sha256', cdnboxStates.config.clustersecret);
     hash.update(req.headers['user-agent'] + tokentime);
     return res[0] === 'token=' + tokentime + '-' + hash.digest('hex');
+}
+
+function cdnbox_status(req,res) {
+  var deltanetcount = 0, deltanetrecvcount = 0;
+  if (cdnbox_status.memnetcount != undefined) {
+    deltanetcount = cdnboxStates.local.netcount - cdnbox_status.memnetcount;
+    if (cdnbox_status.memnetcount == 0 || deltanetcount < 0) deltanetcount = 0;
+  }
+  cdnbox_status.memnetcount = cdnboxStates.local.netcount;
+
+  if (cdnbox_status.memnetrecvcount != undefined) {
+    deltanetrecvcount = cdnboxStates.local.netrecvcount - cdnbox_status.memnetrecvcount;
+    if (cdnbox_status.memnetrecvcount == 0 || deltanetrecvcount < 0) deltanetrecvcount = 0;
+  }
+  cdnbox_status.memnetrecvcount = cdnboxStates.local.netrecvcount;
+
+  try {
+    res.write( '{' +
+      '"release": "' + cdnboxStates.release + '",' +
+      '"uptime": ' + (Date.now() - cdnboxStates.starttime) / 1000 + ',' +
+      '"dns_average_min": ' + cdnboxStates.totaldnscount.average + ',' +
+      '"dns_average_sec": ' + cdnboxStates.local.dnscount.average + ',' +
+      '"bw": ' + cdnboxStates.local.bw + ',' +
+      '"trendbw": ' + cdnboxStates.local.trendbw + ',' +
+      '"bwrecv": ' + cdnboxStates.local.bwrecv + ',' +
+      '"inbound": ' + deltanetrecvcount + ',' +
+      '"outbound": ' + deltanetcount + ',' +
+      '"status": "' + cdnboxStates.local.status + '"' +
+    '}');
+  } catch (e) {
+    console.error(e);
+  }
 }
 
 function apiStates(req,res) {
