@@ -1,4 +1,6 @@
 
+* 1603060693
+ - adding /cdn/status entry point.
 * 1602441772
  - adding timout parameter on localtest.
 * 1594541378
